--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 
 <body>
   <p>
-    <a href="목차.html"target="_blanck"title="목차"><h1>목차</h1></a>
+    <a href="index.html"target="_blanck"title="목차"><h1>목차</h1></a>
   </p>
 <p>
   <h1>CSS</h1>
