--- a/1.html
+++ b/1.html
@@ -8,10 +8,10 @@
 <body>
   <p>
     <ul>
-      <h1><li><a href="index.html"target="_blanck"title="목차">목차</h1></a></li>
-      <h1><li><a href="1.html"target="_blanck"title="HTML">HTML</h1></a></li>
-      <h1><li><a href="2.html"target="_blanck"title="CSS">CSS</h1></a></li>
-    </ul>
+    <h1><li><a href="index.html"target="_blanck"title="목차">목차</h1></a></li>
+    <h1><li><a href="2.html"target="_blanck"title="CSS">CSS</h1></a></li>
+    <h1><li><a href="3.html"target="_blanck"title="JavaScript">JavaScript</h1></a></li>
+  </ul>
   </p>
   <h1>HTML</h1>
   <p>
