--- a/2.html
+++ b/2.html
@@ -8,7 +8,7 @@
 <body>
 <p>
   <ul>
-    <h1><li><a href="index.html"target="_blanck"title="목차">목차</h1></a></li>
+    <h1><li><a href="목차.html"target="_blanck"title="목차">목차</h1></a></li>
     <h1><li><a href="1.html"target="_blanck"title="HIML">HTML</h1></a></li>
     <h1><li><a href="3.html"target="_blanck"title="JavaScript">JavaScript</h1></a></li>
   </ul>
