--- a/3.html
+++ b/3.html
@@ -8,7 +8,7 @@
 <body>
   <p>
     <ul>
-      <h1><li><a href="목차.html"target="_blanck"title="목차">목차</h1></a></li>
+      <h1><li><a href="Sequence.html"target="_blanck"title="목차">목차</h1></a></li>
       <h1><li><a href="1.html"target="_blanck"title="HTML">HTML</h1></a></li>
       <h1><li><a href="2.html"target="_blanck"title="CSS">CSS</h1></a></li>
     </ul>
