--- a/1.html
+++ b/1.html
@@ -8,7 +8,7 @@
 <body>
   <p>
     <ul>
-    <h1><li><a href="Sequence.html"target="_blanck"title="목차">목차</h1></a></li>
+    <h1><li><a href="index.html"target="_blanck"title="목차">목차</h1></a></li>
     <h1><li><a href="2.html"target="_blanck"title="CSS">CSS</h1></a></li>
     <h1><li><a href="3.html"target="_blanck"title="JavaScript">JavaScript</h1></a></li>
   </ul>
@@ -93,6 +93,9 @@
  <strong><u>&lt;html&gt;</u></strong>이라고 한다.
  <br> <strong>&lt;!doctype html&gt;</strong>은 이것이 html문서라는 것을 알려주는 문구이다.<strong>(약속)</strong>
 <p>
+  글 색을 바꿀때에는 <strong>&lt;span style="color:색상"&gt;<u>글자</u>&lt;/span&gt;</strong>를 사용한다.
+  <br>ex:<span style="color:blue">그으으으을자</span>
+</p>
   <a href="https://www.w3.org/TR/2011/WD-html5-20110405/"target="_blank"title="w3c">w3c</a>
   <br><strong>&lt;a herf="사이트 주소or파일 이름"&gt;abc&lt;/a&gt;</strong>를 할시<br> &lt;a&gt;,&lt;/a&gt; 사이에 있는 abc를 클릭하면 등록된 사이트로 이동한다.
   <br><u>사이트 주소or파일 이름</u> 뒤에 <strong>target="_blank"</strong>를 붙이면 새 탭으로 연다.
