--- a/1.html
+++ b/1.html
@@ -13,7 +13,9 @@
     <h1><li><a href="3.html"target="_blanck"title="JavaScript">JavaScript</h1></a></li>
   </ul>
     </p>
+    <p>
   <h1>HTML</h1>
+</p>
   <p>
   태그에서 &lt;시작 abc&gt; &lt;/끝 abc&gt; 처럼
   <strong><u>시작엔 단어</u></strong>만,
@@ -43,7 +45,7 @@
       <br>ㅏㅑㅓㅕㅗㅛㅜㅠ<br>ㄱㄴㄷㄻㅄㅇㅈㅊㅋㅌ
     </p>
   <p>
-    <strong><u>&lt;u&gt;</u></strong>는 글자 밑줄이다.
+    <strong><u>&lt;u&gt;&lt;/u&gt;</u></strong>는 글자 밑줄이다.
   </p>
   <p>
     <strong> <u>(shift)7tl;</u></strong> 은
@@ -91,7 +93,7 @@
   <br>또한 본문은<strong><u>&lt;body&gt;</u></strong>로 묶고 본문을 설명하는 tag는 <strong><u>&lt;head&gt;</u></strong>로 묶는다.
  <br><strong><u>&lt;body&gt;</u></strong>와<strong><u>&lt;head&gt;</u></strong>을 전부 감싸는 tag가 있는데 이 tag를
  <strong><u>&lt;html&gt;</u></strong>이라고 한다.
- <br> <strong>&lt;!doctype html&gt;</strong>은 이것이 html문서라는 것을 알려주는 문구이다.<strong>(약속)</strong>
+ <br> <strong>&lt;!doctype html&gt;</strong>은 이것이 html문서라는 것을 알려주는 문구이다.<span style="color:red"><strong>(약속)</strong></span>
 <p>
   글 색을 바꿀때에는 <strong>&lt;span style="color:색상"&gt;<u>글자</u>&lt;/span&gt;</strong>를 사용한다.
   <br>ex:<span style="color:blue">그으으으을자</span>
