--- a/index.html
+++ b/index.html
@@ -32,5 +32,16 @@
 <p>
   <a href="https://github.com/"type="_blanck"title="github"><big><strong>github</strong></big></a>
 </p>
+<p>
+  전체적인 틀을 건들때에는 <strong>&lt;div&gt;</strong>를 사용하면 된다!
+  <br><big>ex</big>:&lt;div style="width(가로크기),height(세로크기),border(테두리 굵기),background-color(배경 색상),float(정렬),margin(여백)"&gt;
+  <br><a href="file:///C:/Users/a/Desktop/div%20%EC%97%B0%EC%8A%B5/index.html"target="_blanck"title="DIV">DIV 놀이터</a>
+</p>
+<p>
+  <h2><span style="color:green">새롭게</span> <span style="color:purple">배울것들이</span> <span style="color:orange">있는 영상</span></h2>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/WD-LFlMi6iA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+
   </body>
   </html>
