--- a/3.html
+++ b/3.html
@@ -8,9 +8,9 @@
 <body>
   <p>
       <ul>
-      <h1><li><a href="index.html"target="_blanck"title="목차">목차</h1></a></li>
-      <h1><li><a href="1.html"target="_blanck"title="HTML">HTML</h1></a></li>
-      <h1><li><a href="2.html"target="_blanck"title="CSS">CSS</h1></a></li>
+      <h1><li><a href="index.html"target="_blank"title="목차">목차</h1></a></li>
+      <h1><li><a href="1.html"target="_blank"title="HTML">HTML</h1></a></li>
+      <h1><li><a href="2.html"target="_blank"title="CSS">CSS</h1></a></li>
     </ul>
     </p>
   <p>
