--- a/1.html
+++ b/1.html
@@ -3,6 +3,16 @@
 <head>
   <title>HTML-TAG저장소</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165301167-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165301167-1');
+</script>
+
 </head>
 
 <body>
