--- a/1.html
+++ b/1.html
@@ -26,6 +26,14 @@
     <p>
   <h1>HTML</h1>
 </p>
+<input type="button" value="night" onclick="
+ document.querySelector('body').style.backgroundColor='black';
+ document.querySelector('body').style.color='white';
+ ">
+ <input type="button" value="day" onclick="
+   document.querySelector('body').style.backgroundColor='white';
+   document.querySelector('body').style.color='black';
+   ">
 <p>
   <span style="color:blue">HTTP</span>의 정의
   <br>인터넷에서, 웹 서버와 사용자의 인터넷 브라우저
