--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <h1><li><a href="2.html"target="_blank"title="CSS">CSS</a></li></h1>
     <h1><li><a href="3.html"target="_blank"title="JavaScipt">JavaScript</a></li></h1>
   </ul>
+  <input type="button" value="night" onclick="
+   document.querySelector('body').style.backgroundColor='black';
+   document.querySelector('body').style.color='white';
+   ">
+   <input type="button" value="day" onclick="
+     document.querySelector('body').style.backgroundColor='white';
+     document.querySelector('body').style.color='black';
+     ">
 <p>
   새로운 파일을 만들때는 (제목.html)을 해야한다.
   </p>
