--- a/2.html
+++ b/2.html
@@ -26,7 +26,15 @@
 <p>
   <h1>CSS</h1>
  </p>
- 아직 배우지 않았습니다.
+ <input type="button" value="night" onclick="
+  document.querySelector('body').style.backgroundColor='black';
+  document.querySelector('body').style.color='white';
+  ">
+  <input type="button" value="day" onclick="
+    document.querySelector('body').style.backgroundColor='white';
+    document.querySelector('body').style.color='black';
+    ">
+ 아직 배우지 않았습니다.(css는 디자인에 최적화된 언어이다.)
 <p>
     <img src="coding photo 3.jpg"width="30%">
     <img src="coding photo 4.jpg"width="60%">
