--- a/3.html
+++ b/3.html
@@ -16,26 +16,54 @@
 </head>
 
 <body>
+
   <p>
       <ul>
       <h1><li><a href="index.html"target="_blank"title="목차">목차</h1></a></li>
       <h1><li><a href="1.html"target="_blank"title="HTML">HTML</h1></a></li>
       <h1><li><a href="2.html"target="_blank"title="CSS">CSS</h1></a></li>
+      <h2><li><a href=IJih.html target="_blank"title="Insert JavaScript into html">Insert JavaScript into html</h2></a></li>
     </ul>
     </p>
   <p>
-    <h1>JavaScipt</h1>
-  </p>
-  아직 배우지 않았습니다.
-  <p>
-    <img src="coding photo 3.jpg"width="30%">
-    <img src="coding photo 4.jpg"width="60%">
-   </p>
-  <p>
-    <img src="coding photo 4.jpg"width="30%">
-    <img src="coding photo 4.jpg"width="30%">
-    <img src="coding photo 4.jpg"width="30%">
+    <h1>
+      JavaScipt
+    </h1>
   </p>
 
+  <p>
+    javascript는 html을 제어하는 언어이다.
+   </p>
+   <input type="button" value="night" onclick="
+    document.querySelector('body').style.backgroundColor='black';
+    document.querySelector('body').style.color='white';
+    ">
+    <input type="button" value="day" onclick="
+      document.querySelector('body').style.backgroundColor='white';
+      document.querySelector('body').style.color='black';
+      ">
+  <p>
+    <big><strong>input</strong></big>이란 태그를 사용해 다음 코드들을 보일 수 있다.
+    <br>input 다음에는 <big><strong>type</strong></big>를 사용하여 속성을 부여할 수 있다.
+    <br>type 다음에는 <big><strong>value</strong></big>를 사용해 버튼의 이름을 정할 수 있다.
+    <br>value 다음에는 <big><strong>onclick</strong></big>은 웹 브라우져의 html사용 설명서에는
+    onclick이란 속성의 값으로는 자바스크립트가 와야된다고 설명되있다.
+    <br>onclick 이라고 하는 속성의 값으로
+    <br><big><u>document.querySelector('body').style.backgroundColor='black';
+    <br>document.querySelector('body').style.color='white';</u></big>
+    <br>라는 자바스크립트를 넣어주면 사용자가 onclick속성이 위치한 버튼을 클릭했을때 위의 자바스크립트를 실행시킨다.
+    <br><strong>document.querySelector('body').style.backgroundColor='black';</strong>라는 자바스크립트 코드를 해석 해보면
+    <br>document(이 문서)에서body(바디 태그)를 Select(선택)하는 코드가document.querySelector('body')이다.
+    <br>(bady는 말 그대로 &lt;bady&gt;이다.)
+    <br> (이 바디태그에)style(속성 값)으로 backgroundcolor을 black으로 한다.
+    <br>자바스크립트 코드는 <u><strong>알파벳의 대소문자 비교한다.</strong></u>
+      <p>
+        <strong>기본적으로 자바스크립트는 html위에서 동작하는 언어로 시작되었다.</strong>
+        <br>html에 완전히 다른 문법인 자바스크립트를 사용하기 위해서는 웹 브라우저에게 html코드로 자바스크립트가 시작된다는 것을 알려야 된다.
+        <br> 자바스크립트를 사용할때에는 <strong>&lt;script&gt; &lt;/script&gt;</strong> 사이에 자바스크립트 언어를 입력한다.
+        <br> 자바스크립트의 <u><strong>장점</strong></u>은<strong>계산기 등의 다양한 기능이 가능하다.</strong>
+          <br>[EX:기본적으로 html의 1+1을 입력할 시 1+1이 나오지만 자바스크립트의 1+1 은 2가 나온다.]
+      </p>
+       자바스크립트에서 어떤 글씨를 출력할 때에는 document.write(abc);를 쓴다.(<>는 사용하지 않는다.)
 </body>
 </html>
