--- a/IJih.html
+++ b/IJih.html
@@ -5,11 +5,19 @@
     <title></title>
   </head>
   <body>
+    <ul>
+    <h1><li><a href="3.html"target="_blank"title="JavaScript">JavaScript</a></li></h1>
+  </ul>
     <h1>JavaScript</h1>
     <script>
       document.write(1+1);
       </script>
     <h1>html</h1>
       1+1
+      <p>
+        <input type="button" value="HI" onclick="alert('HI!')">
+        <input type="text" onchange="alert('false...')">
+        <input type="text" onkeydown="alert('key down!')">
+
   </body>
 </html>
