--- a/3.html
+++ b/3.html
@@ -74,9 +74,17 @@
        <p>
          웹 브라우저 위에서 일어나는 일들을 <u><strong>사건(영어:이벤트)</strong></u>라고 한다.
        </p>
+       <p>
        <strong>[input type="text"]</strong>처럼 type에 <strong>text</strong>를 넣으면 칸이 생기고 그 칸에 글자를 쓸 수 있다.
        <br> 또한 text="" 후에 <strong>onchange="alert('abc')"</strong> 나 <strong>onkeydown="alert('dey down')"</strong>을 사용하여 메세지를 띄울 수 있다.
        <br><strong>onchange="alert('abc')"</strong> 의 경우 칸 안에 글자를 넣고 다른것을 클릭할 경우 ('')안에 있는 메세지가 뜨고,
        <br><strong>onkeydown="alert('dey down')"</strong>의 경우 칸 안에 키보드의 키를 누를 시 ('')안에 있는 메세지가 뜬다.
+     </p>
+     <p>
+       한 사이트에 검사(f12)룰 클릭 후 <strong>콘솔(console)</strong>을 이용하여 자바스크립트를 즉석에서 이용할 수 있다.
+       <br><strong>(검사에있는 Elements에서 Esc를 누르면 Console도 함께 볼 수 있다.)</strong>
+       <br><strong>(Console에서 같은 코드를 한번 더 사용하고 싶으면 윗쪽 화살표를 클릭하면 된다.)</strong>
+       <br>console에서 어느 문구의 글자 수 를 알고 싶을 때에는 <strong>alert('abc'length)</strong>를 이용하여<strong>'  '</strong>안에 있는 글자 수를 알 수 있다.
+
     </body>
 </html>
