--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   <img src="coding photo 2.jpg"width="50%">
 </p>
 <p>
+  프로그래밍에서는 <strong>+</strong>=더하기 <strong>-</strong>=빼기 <strong>*</strong>=곱하기 <strong>/</strong>=나누기가 된다.
+  <br>ex: 1+1=2 2-1=1 5*2=10 10/5=2
+<p>
   <strong> ctrl <u>s</u> </strong> 는 저장이다.
 </p>
 <p>
