--- a/3.html
+++ b/3.html
@@ -85,6 +85,21 @@
        <br><strong>(검사에있는 Elements에서 Esc를 누르면 Console도 함께 볼 수 있다.)</strong>
        <br><strong>(Console에서 같은 코드를 한번 더 사용하고 싶으면 윗쪽 화살표를 클릭하면 된다.)</strong>
        <br>console에서 어느 문구의 글자 수 를 알고 싶을 때에는 <strong>alert('abc'length)</strong>를 이용하여<strong>'  '</strong>안에 있는 글자 수를 알 수 있다.
-
+       <p>
+         자바스클립트에 있는 <big><strong>데이터타입(자료형)</strong></big>은 총 6개이다.
+         <br> JavaScript에 있는 데이터타입 중 <strong><big>문자열(String)</strong></big>은 console에서
+         문자는<strong>"</strong> 나 <strong>'</strong> 로 시작하여 <strong>"</strong> 나<strong>'</strong> 로 끝나면 된다.
+         <small><br>(ex: "hello world",'hello world')</small>
+         <br>문자열에서는 <big><strong>'abc'.length</strong></big>를 사용하여 글자 수 를 알 수 있다.
+         <br>문자열에서는 <big><strong>'abc'.toUpperCase()</strong></big>를 사용하여 대문자로 바꿀 수 있다.
+         <br>문자열에서는 <big><strong>'abc'.indexof(b)</strong></big>를 사용하면 괄호 안에있는 글자가 몇번째에 있는지 알 수 있다.
+         <small><br>(과호안에 문자를 넣으면 몇번째부터 문자가 시작하는지 알 수 있다.)</small>
+         <br> 또한 <big><strong>'   abc   '.trim()</strong></big>을 사용해 <strong><big>''</strong></big>안에 있는 공백을 지울 수 있다.
+         <br> 등 등의 수 없이 많은 문자열이 있는데 <a href="https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/String"target="_blank"title="JavaScript문자열">JavaScript_String</a>이 사이트로 들어가 문자열들을 찾을 수 있다.
+         <br> JavaScript에 있는 데이터타입 중 <strong><big>숫자(Nummer)</strong></big>는 console에서 그저 1+1이라고만 쳐도 2로 계산이 된다.
+         <br><small>(Nummber이란 데이터타입에서 왼쪽의 값과 오른쪽의 값으로 하나의 값을 만든다 라고 하여 이항연산자라고 부른다.)
+         <br>(이항연산자중 더하기와 빼기,나누기,곱하기는 산술연산자에 속한다.)</small>
+         <br>데이터타입중 Nummber 산술연산자 EX: 2+1=3 4-1=3 3*2=6 8/4=2
+          <br>console에서 1+1=2(Nummber)이지만 "1"+"1"=11(String)이다.
     </body>
 </html>
