--- a/3.html
+++ b/3.html
@@ -101,5 +101,20 @@
          <br>(이항연산자중 더하기와 빼기,나누기,곱하기는 산술연산자에 속한다.)</small>
          <br>데이터타입중 Nummber 산술연산자 EX: 2+1=3 4-1=3 3*2=6 8/4=2
           <br>console에서 1+1=2(Nummber)이지만 "1"+"1"=11(String)이다.
-    </body>
+          <p>
+            (console에서 실행을 유보하고 싶을때에는 shift+Enter을 치면 된다.)
+            <br>console에서 <strong>변수(variavle)</strong>라는 것은 바뀔 수 있는 어떠한 값이다.
+            <br> x = 1;
+            <br> y = 1;
+            <br> x+y;  이라고 하면 x+y=2 로 뜬
+            <br> 이 맥락에서 x라는 것을 변수(variavle), =을 대입연산자라고 한다.(1=2; 라고 입력할시 에러가 뜬다. 1은 상수(constant)이기 때문이다.)
+            <br>변수는 사용할때가 정말 많다.
+            <br>ex: console에 아무 의미 없이
+            <br> alert("asdfa sdfas asdf asdf 3wqetg mpoin po bnio asdf qwer zxcv jkl uiop bnmz asdfa sdfas asdf asdf 3wqetg mpoin po bnio asdf qwer zxcv jkl uiop bnmz asdfa sdfas asdf asdf 3wqetg mpoin po bnio asdf qwer zxcv jkl uiop bnmz asdfa sdfas asdf asdf 3wqetg mpoin po bnio asdf qwer zxcv jkl uiop bnmz asdfa sdfas asdf asdf 3wqetg mpoin po bnio asdf qwer zxcv jkl uiop bnmz asdfa sdfas asdf asdf 3wqetg mpoin po bnio asdf qwer zxcv jkl uiop bnmz");라고 있을때(alert는 없어도 된다.)
+            <br> 이 글 안에 있는 것중 asdf 가 fdsa로 바껴야 된다면
+            <br> var asdf='fdsa';
+            <br>alert("asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz");처럼 <big><strong>모든 asdf를 "+asdf+"</strong></big>로 바꿔준다면 <big><strong>asdf는 fdsa로</strong></big> 바뀔것이다.
+
+
+  </body>
 </html>
