--- a/2.html
+++ b/2.html
@@ -21,6 +21,7 @@
     <h1><li><a href="index.html"target="_blank"title="목차">목차</h1></a></li>
     <h1><li><a href="1.html"target="_blank"title="HIML">HTML</h1></a></li>
     <h1><li><a href="3.html"target="_blank"title="JavaScript">JavaScript</h1></a></li>
+    <h2><li><a href="2-2.html"target="_blank"title="training css">training CSS</h2></a></li>
   </ul>
   </p>
 <p>
@@ -34,16 +35,10 @@
     document.querySelector('body').style.backgroundColor='white';
     document.querySelector('body').style.color='black';
     ">
- 아직 배우지 않았습니다.(css는 디자인에 최적화된 언어이다.)
-<p>
-    <img src="coding photo 3.jpg"width="30%">
-    <img src="coding photo 4.jpg"width="60%">
-</p>
-<p>
-  <img src="coding photo 4.jpg"width="30%">
-  <img src="coding photo 4.jpg"width="30%">
-  <img src="coding photo 4.jpg"width="30%">
-</p>
-
+    <p>
+      style속성 안에는 무조건 CSS언어가 온다고 약속되어 있다.
+      <p>
+        <span style="font-weight:bold;">ABC</span> 처럼 style속성에서 <span style="font-weight:bold;">font-weight:bold;</span>는 글씨를 진하게 하는 것 이다.
+      </p>
 </body>
 </html>
