--- a/3.html
+++ b/3.html
@@ -23,6 +23,7 @@
       <h1><li><a href="1.html"target="_blank"title="HTML">HTML</h1></a></li>
       <h1><li><a href="2.html"target="_blank"title="CSS">CSS</h1></a></li>
       <h2><li><a href=IJih.html target="_blank"title="Insert JavaScript into html">Insert JavaScript into html</h2></a></li>
+      <h2><li><a href="3-2.html" target="_blank" title="training JavaScript"> 3-2JavaScript</h2></a></li>
     </ul>
     </p>
   <p>
@@ -55,10 +56,10 @@
     <br>document.querySelector('body').style.color='white';</u></big>
     <br>라는 자바스크립트를 넣어주면 사용자가 onclick속성이 위치한 버튼을 클릭했을때 위의 자바스크립트를 실행시킨다.
     <br><strong>document.querySelector('body').style.backgroundColor='black';</strong>라는 자바스크립트 코드를 해석 해보면
-    <br>document(이 문서)에서body(바디 태그)를 Select(선택)하는 코드가document.querySelector('body')이다.
-    <br>(bady는 말 그대로 &lt;bady&gt;이다.)
+    <br>document(이 문서)에서bady(바디 태그)를 Select(선택)하는 코드가document.querySelector('body')이다.
     <br> (이 바디태그에)style(속성 값)으로 backgroundcolor을 black으로 한다.
     <br>자바스크립트 코드는 <u><strong>알파벳의 대소문자 비교한다.</strong></u>
+    <br> [white]버튼과 [black]버튼을 눌렀을때 bady태그가 &lt;bady style="color:black<small>(or white)</small>;background-color:white<small>(or black)</small>;"&gt;로 바뀌는데 style 뒤에부턴 css언어인 것으로 약속되어 있다.
       <p>
         <strong>기본적으로 자바스크립트는 html위에서 동작하는 언어로 시작되었다.</strong>
         <br>html에 완전히 다른 문법인 자바스크립트를 사용하기 위해서는 웹 브라우저에게 html코드로 자바스크립트가 시작된다는 것을 알려야 된다.
@@ -79,6 +80,7 @@
        <br> 또한 text="" 후에 <strong>onchange="alert('abc')"</strong> 나 <strong>onkeydown="alert('dey down')"</strong>을 사용하여 메세지를 띄울 수 있다.
        <br><strong>onchange="alert('abc')"</strong> 의 경우 칸 안에 글자를 넣고 다른것을 클릭할 경우 ('')안에 있는 메세지가 뜨고,
        <br><strong>onkeydown="alert('dey down')"</strong>의 경우 칸 안에 키보드의 키를 누를 시 ('')안에 있는 메세지가 뜬다.
+       <br><strong>onclick 안에는 무조건 JavaScript언어가 온다.</strong>
      </p>
      <p>
        한 사이트에 검사(f12)룰 클릭 후 <strong>콘솔(console)</strong>을 이용하여 자바스크립트를 즉석에서 이용할 수 있다.
@@ -114,6 +116,7 @@
             <br> 이 글 안에 있는 것중 asdf 가 fdsa로 바껴야 된다면
             <br> var asdf='fdsa';
             <br>alert("asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz");처럼 <big><strong>모든 asdf를 "+asdf+"</strong></big>로 바꿔준다면 <big><strong>asdf는 fdsa로</strong></big> 바뀔것이다.
+            <p>
 
 
   </body>
