--- a/index.html
+++ b/index.html
@@ -50,11 +50,20 @@
   <h4>나만의 web 연습겸 web 저장소</h4>
   <h5>나만의 web 연습겸 web 저장소</h5>
   <h6>나만의 web 연습겸 web 저장소</h6>
+  <p>
+    <big><strong>&lt;div&gt;와 &lt;span&gt;</strong></big>는 아무 의미도 없지만 어떤 한 단어를 감싸주고 싶을때 쓰는 태그이다.
+    <br>(div는 h1이나 h2 처럼 화면 전체를 사용해 줄바꿈이 되지만 span은 그대로 유지된다.)
+    <br>예를 들어<big>superman vs batman이라는 문구에서 vs만 색을 바꾸고 싶을때
+    <br> superman &lt;span style="color:red"&gt;vs&lt;/span&gt; batman이라고 하면
+    <br> superman <span style="color:red">vs</span> batman 이 된다.</big>
+    <p>
+      <big>ctrl+f</big>를 누르면 내가 찾고싶은 글자(들)을 윗칸에 쳐서 찾을 수 잇고 아랫칸에 그 글자를 바꿀 수 있다.
+      <br>(아랫칸에 코드를 입력시 코드가 적용된다.)
+    </p>
 <p>
   <a href="https://github.com/"type="_blanck"title="github"><big><strong>github</strong></big></a>
 </p>
 <p>
-  전체적인 틀을 건들때에는 <strong>&lt;div&gt;</strong>를 사용하면 된다!
   <br><big>ex</big>:&lt;div style="width(가로크기),height(세로크기),border(테두리 굵기),background-color(배경 색상),float(정렬),margin(여백)"&gt;
   <br><a href="file:///C:/Users/a/Desktop/div%20%EC%97%B0%EC%8A%B5/index.html"target="_blanck"title="DIV">DIV 놀이터</a>
 </p>
