--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <br> superman <span style="color:red">vs</span> batman 이 된다.</big>
     <p>
       <big>ctrl+f</big>를 누르면 내가 찾고싶은 글자(들)을 윗칸에 쳐서 찾을 수 잇고 아랫칸에 그 글자를 바꿀 수 있다.
-      <br>(아랫칸에 코드를 입력시 코드가 적용된다.)
+      <br>(아랫칸에 코드를 입력시 코드가 적용된다.대신 내가 원치 않는것까지 취급될 수 있으니 주의하자.)
     </p>
 <p>
   <a href="https://github.com/"type="_blanck"title="github"><big><strong>github</strong></big></a>
