--- a/3-2.html
+++ b/3-2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JavaScipt-TAG저장소</title>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
       <ul>
       <h1><li><a href="index.html"target="_blank"title="목차">목차</h1></a></li>
         <h1 style="color:powderblue;background-color:coral">JavaScript</h1>
-    <big><strong>input</strong></big>이란 태그를 사용해 다음 코드들을 보일 수 있다.
+    <span style="font-weight:bold;">input</span>이란 태그를 사용해 다음 코드들을 보일 수 있다.
     <br>input 다음에는 <big><strong>type</strong></big>를 사용하여 속성을 부여할 수 있다.
     <br>type 다음에는 <big><strong>value</strong></big>를 사용해 버튼의 이름을 정할 수 있다.
     <br>value 다음에는 <big><strong>onclick</strong></big>은 웹 브라우져의 html사용 설명서에는
