--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
   gtag('config', 'UA-165301167-1');
 </script>
-
+  <style>
+  .js{
+    font-size:30px;
+    color:Aqua;
+  }
+    </style>
 </head>
 
 <body>
@@ -29,6 +34,7 @@
      document.querySelector('body').style.backgroundColor='white';
      document.querySelector('body').style.color='black';
      ">
+     <div class="js">모르는 코드가 있을때에는 꼭!! 검색하자!!! 검색 개사기다!!</div>
 <p>
   새로운 파일을 만들때는 (제목.html)을 해야한다.
   </p>
