--- a/3.html
+++ b/3.html
@@ -22,8 +22,9 @@
       <h1><li><a href="index.html"target="_blank"title="목차">목차</h1></a></li>
       <h1><li><a href="1.html"target="_blank"title="HTML">HTML</h1></a></li>
       <h1><li><a href="2.html"target="_blank"title="CSS">CSS</h1></a></li>
-      <h2><li><a href=IJih.html target="_blank"title="Insert JavaScript into html">Insert JavaScript into html</h2></a></li>
-      <h2><li><a href="3-2.html" target="_blank" title="training JavaScript"> 3-2JavaScript</h2></a></li>
+      <h2><li><a href=IJih.html target="_blank"title="IJig">Insert JavaScript into html</h2></a></li>
+      <h2><li><a href="3-2.html" target="_blank" title="3-2"> 3-2</h2></a></li>
+      <h2><li><a href="3-3.html" target="_blank" title="3-3">3-3</h2></a></li>
     </ul>
     </p>
   <p>
@@ -117,6 +118,7 @@
             <br> var asdf='fdsa';
             <br>alert("asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz asdfa sdfas "+asdf+" "+asdf+" 3wqetg mpoin po bnio "+asdf+" qwer zxcv jkl uiop bnmz");처럼 <big><strong>모든 asdf를 "+asdf+"</strong></big>로 바꿔준다면 <big><strong>asdf는 fdsa로</strong></big> 바뀔것이다.
             <p>
+
 
 
   </body>
